--- a/setup.cfg
+++ b/setup.cfg
@@ -16,3 +16,33 @@ exclude =
 max-line-length = 100
 max-complexity = 8
 unused-arguments-ignore-abstract-functions = True
+
+[tool:pytest]
+norecursedirs = hooks *.egg .eggs dist build docs .tox .git __pycache__
+testdox_format = plaintext
+
+addopts =
+  --strict
+  --tb=short
+  --show-capture=stderr
+  --cov-report=term-missing:skip-covered
+  --cov-report=xml:coverage.xml
+  --cov-report=html
+  --cov-branch
+  --cov=app
+  --cov-fail-under=90
+  --testdox
+  --no-header
+  --junit-xml=report.xml
+  -x
+
+filterwarnings = ignore::DeprecationWarning
+                 ignore::UserWarning
+
+
+# для работы плагина pytest-dotenv
+[pytest]
+env_override_existing_values = 1
+env_files =
+    .env
+    test.env
