--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,3 +23,9 @@ lint = [
     "isort>=6.0.1",
     "mypy>=1.18.2",
 ]
+test = [
+    "pytest>=8.4.2",
+    "pytest-clarity>=1.0.1",
+    "pytest-cov>=7.0.0",
+    "pytest-testdox>=3.1.0",
+]
