--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,7 @@ dependencies = [
 
 [dependency-groups]
 dev = [
-    "pre-commit>=4.3.0",
-    "pytest>=8.4.2",
+    "pre-commit>=4.3.0"
 ]
 lint = [
     "flake8>=7.3.0",
